--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,29 @@
+@keyframes FadeIn{
+  from{
+      opacity: 0;
+  }
+  to{
+      opacity: 1
+  }
+}
 body {
   margin: 0;
+  animation: FadeIn 1s;
+  overflow-y: overlay;
+  
+  background-color: #1A232C;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+::-webkit-scrollbar{
+  width: 5px;  
+}
+::-webkit-scrollbar-thumb{
+  background-color: #1B9CFC;
+  border-radius: 5px;
 }
 
 code {
